<resources>
    <string name="app_name">WallapopApp</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="nombre_register">Nombre</string>
    <string name="apellidos_register">Apellidos</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_forgot">Olvidastes tu contraseña?</string>
    <string name="register">No tienes cuenta aun?Registrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="artNom">Nombre</string>
    <string name="artDes">Descripcion</string>
    <string name="artPrecio">Precio</string>
    <string name="btnAlta">Alta Producto</string>
    <string-array name="spCat">
        <item>Electronica</item>
        <item>Informatica</item>
        <item>Coches</item>
        <item>Moda y Complementos</item>
        <item>Hogar y Jardin</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
