<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Vistas.Login">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true" android:layout_marginTop="229dp"
            android:layout_marginBottom="385dp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:layout_above="@+id/btnLogin">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmailLog"
                android:hint="@string/prompt_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_marginTop="328dp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="336dp"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtPassLog"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:layout_marginTop="-422dp"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:layout_width="193dp"
            android:layout_height="50dp" android:id="@+id/txtRegistrar" android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="244dp" android:text="@string/register"
            android:onClick="register"
    />
    <TextView
            android:layout_width="193dp"
            android:layout_height="50dp" android:id="@+id/txtOlvidar" android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="187dp" android:text="@string/prompt_forgot"
    />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="136dp"
            android:layout_height="130dp"
            android:visibility="gone"
            android:indeterminate="true"
            android:id="@+id/progressBar2" android:layout_alignParentStart="true" android:layout_marginStart="153dp"
            android:layout_alignParentTop="true" android:layout_marginTop="248dp"/>
    <Button
            android:text="@string/action_sign_in_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:id="@+id/btnLogin" android:layout_marginBottom="1dp"
            android:onClick="login"/>
</RelativeLayout>