<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Vistas.AnadirProducto"
        android:background="@drawable/grandient">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="140dp"
            android:layout_height="122dp"
            android:id="@+id/proCargar2"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="140dp"/>
    <ImageView
            android:src="@drawable/ic_menu_camera"
            android:layout_width="180dp"
            android:layout_height="180dp" android:id="@+id/imgArt" android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp" android:layout_marginTop="10dp"/>
    <ImageButton
            android:src="@drawable/ic_menu_camera"
            android:layout_width="49dp"
            android:layout_height="wrap_content" android:id="@+id/btnImgCargar" android:layout_marginLeft="175dp"
            android:layout_marginRight="175dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="69dp" android:layout_alignParentBottom="true"
            android:layout_below="@+id/imgArt"
            android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/artNom"
                android:id="@+id/artNom"
                android:layout_gravity="center"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="69dp" android:layout_alignParentBottom="true" android:layout_below="@+id/imgArt"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/artDes"
                android:id="@+id/artDes"
                android:layout_gravity="center"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="69dp" android:layout_alignParentBottom="true"
            android:layout_below="@+id/imgArt"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/artPrecio"
                android:id="@+id/artPre"
                android:layout_gravity="center"/>
    </android.support.design.widget.TextInputLayout>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/spCategorias"
            android:entries="@array/spCat"
            android:layout_marginStart="0dp"/>
    <Button
            android:text="@string/btnAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAlta"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="150dp"
    />
</LinearLayout>




