<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grandient"
        tools:context=".Vistas.Registro">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="140dp"
            android:layout_height="122dp"
            android:id="@+id/proCargar"
            android:visibility="gone"
            android:layout_marginBottom="363dp" android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" android:layout_marginStart="140dp"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="148dp" app:srcCompat="@drawable/ic_menu_camera" android:id="@+id/imgReg"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="275dp" android:layout_above="@+id/btnRegistrar"
            android:layout_marginBottom="121dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_marginTop="42dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="632dp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail"
                android:hint="@string/prompt_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_marginTop="106dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="568dp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNombre"
                android:hint="@string/nombre_register"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_marginTop="167dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="507dp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtApell"
                android:hint="@string/apellidos_register"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_marginTop="232dp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:layout_marginBottom="442dp" android:layout_alignParentBottom="true">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtPass"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="Registrar"
            android:onClick="register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" android:id="@+id/btnRegistrar" android:layout_marginBottom="0dp"
            android:layout_alignParentStart="true"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_menu_camera"
            android:id="@+id/imgBtnReg"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/imgReg" android:layout_marginStart="154dp" android:layout_marginEnd="150dp"
            android:layout_marginBottom="-99dp"/>

</RelativeLayout>